<resources>
    <string name="app_name">掌中宝</string>
    <string name="common_ok">确定</string>
    <string name="common_cancel">取消</string>
    <string name="common_search">查询</string>
    <string name="common_please_enter_the_useful_criteria">请输入有效的查询条件！</string>
    <string name="common_please_enter_the_contract_id">"请输入合同编号！</string>
    <string name="common_sorry_is_loading_now">数据加载中...</string>
    <string name="common_sorry_not_date">抱歉，暂无数据...</string>
    <string name="common_sorry_load_failed">加载失败，请检查网络...</string>
    <string name="common_sorry_request_failed">加载失败，请检查网络...</string>
    <string name="common_not_date">已加载完所有数据！</string>
    <string name="common_refresh_failed">刷新失败,请检查网络...！</string>
    <string name="common_refresh_success">刷新成功！</string>
    <string name="common_load_success">加载成功！</string>
    <string name="common_load_failed">加载失败,请检查网络...！</string>
    <string name="common_request_success">请求成功！</string>
    <string name="common_request_failed">请求失败，请检查网络...！</string>
    <string name="common_request_failed_by_network">请求失败，请检查网络！</string>
    <string name="common_home">首页</string>
    <string name="common_reminder">温馨提示</string>
    <string name="common_financialAssistant">财务助手</string>
    <string name="common_toolbar">工具箱</string>
    <string name="common_message_reminder">通知提醒</string>
    <string name="common_message_reminder_import">进口通知</string>
    <string name="common_message_reminder_export">出口通知</string>
    <string name="common_message_reminder_guarantee">保函通知</string>
    <string name="common_message_reminder_factoring">保理通知</string>
    <string name="common_message_reminder_forward">远期通知</string>
    <string name="common_boc_analyse">中银分析</string>
    <string name="common_business_query">业务查询</string>
    <string name="common_business_query_chose_start_time">请选择开始时间</string>
    <string name="common_business_query_chose_end_time">请选择结束时间</string>
    <string name="common_business_query_chose_contract_id">请输入业务编号</string>
    <string name="common_business_query_please_enter_the_contract_id">请输入合同编号查询</string>
    <string name="activity_business_query_end_time_wrong">结束时间不能小于等于开始时间，请重新选择结束时间！</string>
    <string name="activity_business_query_end_time_wrong2">结束时间不能大于当前时间，请重新选择结束时间！</string>
    <string name="activity_business_query_end_time_wrong3">开始时间不能大于等于当前时间，请重新选择开始时间！</string>
    <string name="activity_business_query_import">进口业务</string>
    <string name="activity_business_query_import_open">进口信用证开立查询</string>
    <string name="activity_business_query_import_acceptance">进口信用证承兑业务查询</string>
    <string name="activity_business_query_import_order">进口信用证到单查询</string>
    <string name="activity_business_query_import_collection_order">进口代收到单查询</string>
    <string name="activity_business_query_export">进口信用证到单查询</string>
    <string name="activity_business_query_guarantee">保函业务</string>
    <string name="activity_business_query_factoring_and_financing">保理及供应链融资业务</string>
    <string name="activity_business_query_criteria">查询条件</string>
    <string name="activity_business_query_start_date">开始时间</string>
    <string name="activity_business_query_end_date">结束时间</string>
    <string name="activity_business_query_contract_id">合同编号</string>
    <string name="activity_business_query_result_title">合同查询</string>
    <string name="activity_business_query_no_date_for_this_contractId">请输入有效的合同编号！</string>
    <string name="activity_business_query_no_date_for_this_time">请输入有效的起止时间！</string>
    <string name="activity_business_query_no_date_for_this_time_and_contract_id">请输入有效的起止时间和合同编号！</string>
    <string name="activity_message_filter_condition0">全部</string>
    <string name="activity_message_import_filter_condition1">进口信用证开立通知</string>
    <string name="activity_message_import_filter_condition2">进口信用证到单通知</string>
    <string name="activity_message_import_filter_condition3">进口信用证即期付款提示</string>
    <string name="activity_message_import_filter_condition4">进口信用证承兑到期付款提示</string>
    <string name="activity_message_import_filter_condition5">进口贸易金融业务到期提示</string>
    <string name="activity_message_import_filter_condition6">进口代收到单通知</string>
    <string name="activity_message_export_filter_condition1">出口信用证开立通知</string>
    <string name="activity_message_export_filter_condition2">出口信用证结算通知书</string>
    <string name="activity_message_export_filter_condition3">出口结汇通知书</string>
    <string name="activity_message_export_filter_condition4">出口信用证承兑到期付款提示</string>
    <string name="activity_message_export_filter_condition5">出口贸易业务到期提示</string>
    <string name="activity_message_guarantee_filter_condition1">保函通知</string>
    <string name="activity_message_guarantee_filter_condition2">保函收费通知</string>
    <string name="activity_message_guarantee_filter_condition3">保函上传通知</string>
    <string name="activity_message_guarantee_filter_condition4">融资性担保定义通知</string>
    <string name="activity_message_factoring_filter_condition1">保理商签发收账通知</string>
    <string name="activity_message_factoring_filter_condition2">保理业务确认函提示</string>
    <string name="activity_message_factoring_filter_condition3">商业保理行业管理提示</string>
    <string name="activity_message_factoring_filter_condition4">国际保理业务通知</string>
    <string name="activity_message_forward_filter_condition1">远期外汇通知</string>
    <string name="activity_message_forward_filter_condition2">外汇资金业务通知</string>
    <string name="activity_message_forward_filter_condition3">代理结售汇业务通知</string>
    <string name="activity_message_forward_filter_condition4"> 代客外汇理财业务提示</string>
    <string name="activity_message_forward_filter_condition5"> 代客外汇风险管理提示</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="et_login_user">用户名/手机号/邮箱</string>
    <string name="btn_registered">注册</string>
    <string name="btn_login">登录</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="tv_user_suggestion">意见反馈</string>
    <string name="tv_user_check_update">检查更新</string>
    <string name="tv_user_about">关于</string>
    <string name="tv_user_exit">退出登录</string>
    <string name="tv_user_center">个人中心</string>
    <string name="toast_exit">退出登录</string>
    <string name="toast_user_error">用户名或密码错误！</string>
    <string name="toast_check_update">已经是最新版本</string>
    <string name="title_activity_suggestion">SuggestionActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="tv_version">版本号1.0</string>
    <string name="tv_app_name">中行国结掌中宝</string>
    <string name="btn_send">发送</string>
    <string name="et_contact">请输入您的联系方式</string>
    <string name="et_suggestion">请输入您的意见或建议</string>
    <string name="toast_get_suggestion">已经收到您的意见</string>
    <string name="et_registered_user_name">请输入用户名/手机号/邮箱</string>
    <string name="et_key">请输入6-15位密码</string>
    <string name="tv_tool_product"><![CDATA[产品&市场]]></string>
    <string name="tv_tool_toolkit">工具箱</string>
    <string name="text_analysis">中银分析</string>
    <string name="text_rate">汇率</string>
    <string name="text_product_introduction">产品介绍</string>
    <string name="text_product">热销理财产品</string>
    <string name="text_calculator">计算器</string>
    <string name="title_activity_analysis">AnalysisActivity</string>
    <string name="tv_tool_analysis_title">欧元区正式开启QE进程</string>
    <string name="tv_tool_analysis_content">欧洲央行行长德拉基宣布购买欧元债券</string>
    <string name="tv_tool_analysis_time">[2015-01-01]</string>
    <string name="title_activity_rate">RateActivity</string>
    <string name="title_activity_analysis_details">AnalysisDetailsActivity</string>
    <string name="title_activity_financial_product">FinancialProductActivity</string>
    <string name="text_financial">理财</string>
    <string name="text_financial_title1">中银QD02(中银稳健增长)</string>
    <string name="text_financial_title2">中银QD02(中银新兴市场)</string>
    <string name="text_financial_title3">中银QD02(中银债市通理财计划)</string>
    <string name="text_financial_title4">债市通(中银债市通理财计划)</string>
    <string name="text_financial_title5">中银FQF1(中银精选基金理财计划)</string>
    <string name="text_financial_title6">中银QD02(中银精选基金理财计划)</string>
    <string name="text_financial_time1">2017-05-01</string>
    <string name="text_financial_time2">2017-05-15</string>
    <string name="text_financial_time3">2017-06-08</string>
    <string name="text_financial_time4">2017-06-09</string>
    <string name="text_financial_time5">2017-06-15</string>
    <string name="text_financial_time6">2017-06-16</string>
    <string name="title_activity_finalysis_detail">FinalysisDetailActivity</string>
    <string name="text_detail">融货达</string>
    <string name="title_activity_calculator">CalculatorActivity</string>
    <string name="tv_calculator">计算器</string>
    <string name="tv_currency_calculator">汇率计算器</string>
    <string name="tv_price_calculator">远期报价计算器</string>
    <string name="title_activity_currency_calculator">CurrencyCalculatorActivity</string>
    <string name="tv_rate">汇率</string>
    <string name="tv_product_introduce">产品介绍</string>
    <string name="tv_tool_rate">中国银行远期结售汇牌价</string>
    <string name="title_activity_forward_quotation_calculate">ForwardQuotationCalculateActivity
    </string>
    <string name="tv_calculate_currency">币种：</string>
    <string name="tv_calculate_trade_direction">交易方向：</string>
    <string name="tv_calculate_spot_purchase_price">现汇买入价：</string>
    <string name="tv_calculate_foreign_currency_amount">外币金额：</string>
    <string name="tv_calculate_exchange">兑换人民币：</string>
    <string name="tv_calculate_rate">签单汇率：</string>
    <string name="title_activity_account_detail">AccountDetailActivity</string>
    <string name="text_financial_assistant">财务助手</string>
    <string name="title_activity_">Activity</string>
    <string name="text_product_supply">供应链融资</string>
    <string name="text_product_trade">国际贸易结算</string>
    <string name="text_not_search">没有找到相匹配的产品</string>
    <string name="tv_exchange">结汇</string>
    <string name="tv_sale">售汇</string>
    <string name="tv_dollar">美元</string>
    <string name="tv_yuan">元</string>
    <string name="tv_calculator_data">远期到期日:</string>
    <string name="tv_account">账户</string>
    <string name="tv_account_data">2869****787</string>
    <string name="tv_balance_data">134,231,233.00</string>
    <string name="tv_payment_data">28,000,000.00</string>
    <string name="tv_financial_currency">[人民币]</string>
    <string name="title_activity_intel_product_detail2">IntelProductDetailActivity2</string>
    <string name="text_loading">正在加载...</string>
    <string name="toast_suggestion_error">反馈失败</string>
</resources>
