<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <include layout="@layout/layout_top_bar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/common_margin_small"
                android:layout_marginRight="@dimen/common_margin_normal"
                android:layout_marginTop="@dimen/common_margin_normal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    style="@style/tv_calculator"
                    android:text="@string/tv_calculate_currency"/>

                <TextView
                    android:id="@+id/tvRate"
                    android:layout_width="match_parent"
                    android:layout_height="38dp"
                    android:background="@drawable/shape_search"
                    android:drawablePadding="@dimen/common_padding_normal"
                    android:drawableRight="@mipmap/right_down"
                    android:gravity="center_vertical"
                    android:padding="@dimen/common_padding_small"
                    android:text="@string/tv_dollar"
                    android:textColor="@color/tv_subtitle"
                    android:textSize="@dimen/text_size_normal"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/common_margin_small"
                android:layout_marginRight="@dimen/common_margin_normal"
                android:layout_marginTop="@dimen/common_margin_normal"
                android:orientation="horizontal">

                <TextView
                    style="@style/tv_calculator"
                    android:text="@string/tv_calculate_trade_direction"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="38dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnExchangeRateSettlement"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@mipmap/btn_left_pre"
                        android:text="@string/tv_exchange"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_normal"/>

                    <Button
                        android:id="@+id/btnExchangeRateSurrendering"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@mipmap/btn_right"
                        android:text="@string/tv_sale"
                        android:textColor="@color/tv_subtitle"
                        android:textSize="@dimen/text_size_normal"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/common_margin_small"
                android:layout_marginRight="@dimen/common_margin_normal"
                android:layout_marginTop="@dimen/common_margin_normal"
                android:orientation="horizontal">

                <TextView
                    style="@style/tv_calculator"
                    android:text="@string/tv_calculate_spot_purchase_price"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="38dp"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvSpotPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:fontFamily="sans-serif-smallcaps"
                        android:textColor="@color/tv_subtitle"
                        android:textSize="@dimen/text_size_normal"/>

                    <TextView
                        android:id="@+id/tvExchangeRatePurchasePrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/common_margin_small"
                        android:text="@string/tv_dollar"
                        android:textColor="@color/tv_subtitle"
                        android:textSize="@dimen/text_size_normal"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_marginLeft="@dimen/common_margin_small"
                android:layout_marginRight="@dimen/common_margin_normal"
                android:layout_marginTop="@dimen/common_margin_normal"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/tv_calculator"
                    android:text="@string/tv_calculate_foreign_currency_amount"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="38dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/etExchangeRateCurrency"
                        android:layout_width="0dp"
                        android:layout_height="38dp"
                        android:layout_weight="1"
                        android:background="@drawable/shape_search"
                        android:gravity="right|center_vertical"
                        android:inputType="numberDecimal"
                        android:maxLength="15"
                        android:paddingLeft="@dimen/common_padding_normal"
                        android:paddingRight="@dimen/common_padding_normal"
                        android:textColor="@color/tv_subtitle"
                        android:textSize="@dimen/text_size_normal"/>

                    <TextView
                        android:id="@+id/tvExchangeRateAmount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/common_margin_small"
                        android:text="@string/tv_dollar"
                        android:textColor="@color/tv_subtitle"
                        android:textSize="@dimen/text_size_normal"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/common_margin_small"
                android:layout_marginRight="@dimen/common_margin_normal"
                android:layout_marginTop="@dimen/common_margin_normal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    style="@style/tv_calculator"
                    android:text="@string/tv_calculate_exchange"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvExchangeRateExchange"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:fontFamily="sans-serif-smallcaps"
                        android:textColor="#da9928"
                        android:textSize="@dimen/text_size_normal"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="@dimen/common_margin_normal"
                        android:layout_marginRight="@dimen/common_margin_normal"
                        android:text="@string/tv_yuan"
                        android:textColor="@color/tv_subtitle"
                        android:textSize="@dimen/text_size_normal"/>

                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/common_margin_normal"
                android:layout_marginLeft="@dimen/common_margin_normal"
                android:layout_marginRight="@dimen/common_margin_normal"
                android:layout_marginTop="@dimen/common_margin_big"
                android:background="@mipmap/line_03"/>

            <include layout="@layout/layout_bottom_content"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
